--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
+    "@iconify/react": "^6.0.2",
     "next": "16.1.0",
     "react": "19.2.3",
     "react-dom": "19.2.3"
